classDiagram
  direction LR

  class TUTORES {
      +int id [PK]
      +string nome
      +string cpf [UK]
      +string email
      +string telefone
  }
  
  class ESPECIES {
      +int id [PK]
      +string nome [UK]
  }

  class VETERINARIOS {
      +int id [PK]
      +string nome
      +string crmv [UK]
      +string especialidade
      +string telefone
  }

  class ANIMAIS {
      +int id [PK]
      +string nome
      +int especie_id [FK]
      +string raca
      +date data_nascimento
      +int tutor_id [FK]
  }

  class CONSULTAS {
      +int id [PK]
      +int animal_id [FK]
      +int veterinario_id [FK]
      +datetime data_hora
      +string diagnostico
      +decimal valor
      +string status
  }

  class PAGAMENTOS {
      +int id [PK]
      +int consulta_id [FK]
      +decimal valor_pago
      +string forma_pagamento
      +datetime data_pagamento
      +string status
  }
  
  class LOG_AUDITORIA {
      +int id [PK]
      +string tabela_afetada
      +string acao
      +int registro_id
      +string detalhes
      +timestamp data_hora
  }

  TUTORES "1" --> "N" ANIMAIS : possui
  ESPECIES "1" --> "N" ANIMAIS : classifica
  ANIMAIS "1" --> "N" CONSULTAS : recebe
  VETERINARIOS "1" --> "N" CONSULTAS : realiza
  CONSULTAS "1" --> "1" PAGAMENTOS : gera
